# bpfman-hacks

./: .gitignore  README.md
bpfman-purger/: .gitignore  Makefile  go.mod  go.sum  main.go  nuke-bpfapps
bsd/: .gitignore  Cargo.toml  README.md  flake.nix  rustfmt.toml  sample-output.md  sample-output.txt
bsd/src/: main.rs
bugs/OCPBUGS-55087/: DISCOVERY.md  Makefile  README.md  bpfman-catalog.yaml  bpfman-catalogsource.yaml  bpfman-idms.yaml  go.mod  go.sum  justfile  latest-catalog-image.go  operator-group.yaml  subscription.yaml
creat/: .gitignore  creat.sh
creat/queries/: shared-maps  which-links-belong-to-program  which-maps-program-uses
creat/src/: main.rs
db/: Cargo.toml  creat.sh  schema.sql
db/queries/: which-programs-use-map
httpproxy/: Makefile  export_test.go  go.mod  proxy.go  proxy_test.go
openshift/CI/: README.md  common.sh  prow-ok2test-lgtm-approve  prow-ok2test-lgtm-approve.service  prow-ok2test-lgtm-approve.timer  prow-override-test-fmt  prow-override-test-fmt.service  prow-override-test-fmt.timer  retest  setup-systemd  toggle-mintmaker-rebase
openshift/verify-agent-metrics/: README.md  go.mod  go.sum  (+1 more)
qemu-dev/: README.md  bpfman-cleanup-integration-test  bpfman-dev-qemu  bpfman-flush-cache  bpfman-gen-config  flake.nix
s2s/: .env  .gitignore  Cargo.toml  build.rs  diesel.toml  generate-diesel-schema  run
s2s/migrations/2025-02-12-140102_create_initial_schema/: down.sql  up.sql
s2s/src/: lib.rs  models.rs  schema.rs  u64blob.rs  uintblob.rs
stats/: .envrc  .gitignore  Makefile  go.mod  justfile  page-faults.bt
(+23 files in other folders)
